add_subdirectory(AutoStartManager)
add_subdirectory(Battery)
add_subdirectory(BatteryQuick)
add_subdirectory(Bubble)
add_subdirectory(ButtonIconStateManager)
add_subdirectory(Carousel3DView)
# add_subdirectory(Chart)
add_subdirectory(CheckableTreeItem)
add_subdirectory(CircularProgress)
add_subdirectory(CircularProgressQuick)
add_subdirectory(Clock)
add_subdirectory(ClockQuick)
add_subdirectory(DashBoard)
add_subdirectory(DashBoardQuick)
add_subdirectory(GridViewModel)
add_subdirectory(HttpClient)
add_subdirectory(LifecycleCallback)
add_subdirectory(LoadingIndicator)
add_subdirectory(LoadingIndicatorQuick)
add_subdirectory(LoadingOverlayQuick)
add_subdirectory(NavigationProgressBar)
add_subdirectory(NavigationProgressBarQuick)
add_subdirectory(PasswordInputQuick)
add_subdirectory(PasswordLineEdit)
add_subdirectory(ProgressBar)
add_subdirectory(ReactorServer)
add_subdirectory(SqliteWAL)
add_subdirectory(SwitchButton)
add_subdirectory(TableViewModel)
add_subdirectory(TreeViewModel)

if(CMAKE_HOST_WIN32)
  add_subdirectory(WindowsIntegration)
endif()
